--- a/WebContent/common.css
+++ b/WebContent/common.css
@@ -21,10 +21,10 @@ img { border: none; }   /*이미지 테두리 없애기(border:테두리)*/
 .tnb { clear:both; width:100%; height:30px; background-color: #ff9900;}
 .tnb_wrap { clear:both; width: 1400px; margin: 0 auto;  height:20px; }
 .left_tnb { float:left;}
-.left_tnb .nav { float: left; line-height:20px; }
-.left_tnb .nav a last-child::before { content:"|"; color:#2352; margin-right: 14px;}
-.left_tnb .nav a { margin-right:14px;}
-.left_tnb .nav a:hover { color: #fff;}
+.left_tnb li { float: left; line-height:20px; }
+.left_tnb li:first-child::after { content:"|"; color:#2352; margin-right: 14px;}
+.left_tnb li a { margin-right:14px;}
+.left_tnb li a:hover { color: #fff;}
 .right_tnb { float: right;}
 .right_tnb li { float: left; line-height:20px; margin-top: 5px;}
 .right_tnb li a.sns1 { margin-left:14px; display:block; 
